# murmer-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  docker-entrypoint.sh  implementation.txt  pbcopy  remote_actor_spec.md  test_nodes.sh
.github/workflows/: book.yml  ci.yml  release.yml
book/: book.toml  murmer-theme.css
book/src/: SUMMARY.md  actors-and-messages.md  administration.md  clustering.md  discovery.md  edge-clients.md  getting-started.md  introduction.md  macros.md  monitoring.md  murmer-app.md  simulation-determinism.md  simulation-extending.md  simulation.md  supervision.md
docs/: receptionist-architecture.md
examples/: Cargo.toml  cluster_test.rs  node_ping.rs
examples/simple/: simple.rs
examples/src/: chat.rs  cluster_chat.rs  counter.rs  edge_client.rs  orchestrator.rs  sim_app_demo.rs  sim_cluster_demo.rs  supervisor.rs
experiments/dispatch-poc/: Cargo.toml
experiments/dispatch-poc/poc-app/: Cargo.toml
experiments/dispatch-poc/poc-app/src/: main.rs
experiments/dispatch-poc/poc-framework/: Cargo.toml
experiments/dispatch-poc/poc-framework/src/: lib.rs
experiments/dispatch-poc/poc-framework/src/cluster/: certs.rs  config.rs  error.rs  membership.rs  mod.rs  remote.rs  sync.rs
experiments/dispatch-poc/poc-macros/: Cargo.toml
experiments/dispatch-poc/poc-macros/src/: lib.rs
experiments/dispatch-poc/src/: main.rs
memory/: MEMORY.md  project_schedule_repeat_revisit.md
murmer/: Cargo.toml
murmer-app/: Cargo.toml
murmer-app/src/: bridge.rs  coordinator.rs  election.rs  error.rs  lib.rs  node_info.rs  placement.rs  spawn_sender.rs  spec.rs
murmer-cluster-tests/: Cargo.toml
murmer-cluster-tests/src/: actors.rs  lib.rs
murmer-cluster-tests/tests/: scenarios.rs  singleton.rs
murmer-core/: Cargo.toml
murmer-core/src/: actor.rs  endpoint.rs  lib.rs  lib.test.rs  message.rs  supervisor.rs  system.rs
murmer-core/src/cluster/: config.rs  framing.rs  identity.rs  manager.rs  mod.rs  runtime.rs  transport.rs
murmer-core/src/node/: address.rs  certs.rs  id.rs  mod.rs  server.rs  tests.rs
murmer-core/src/receptionist/: messages.rs  mod.rs  registry.rs
murmer-macros/: Cargo.toml
murmer-macros/src/: lib.rs
murmer-monitor/: Cargo.toml
murmer-monitor/src/: lib.rs  monitor.rs
murmer/src/: actor.rs  client.rs  cluster.rs  cluster.test.rs  cluster_example.rs  context.rs  endpoint.rs  id.rs  instrument.rs  lib.rs  lifecycle.rs  listing.rs  mailbox.rs  membership.rs  membership.test.rs  message.rs  net.rs  net.test.rs  node.rs  oplog.rs  path.rs  prelude.rs  ready.rs  receptionist.rs  receptionist.test.rs  receptionist_test.rs  router.rs  runtime.rs  sim.rs  supervisor.rs  system.rs  test_utils.rs  test_utils_example.rs  tls.rs  wire.rs
murmer/src/app/: bridge.rs  coordinator.rs  election.rs  error.rs  mod.rs  node_info.rs  placement.rs  singleton.rs  spawn_sender.rs  spec.rs
murmer/src/cluster/: allowlist.rs  config.rs  discovery.rs  error.rs  framing.rs  identity_key.rs  membership.rs  mod.rs  remote.rs  sync.rs  transport.rs
murmer/src/cluster/net/: iroh.rs  mod.rs  sim.rs  sim_cluster.rs
murmer/src/monitor/: events.rs  mod.rs  monitor.rs  prometheus_setup.rs
murmer/src/node/: actor.rs  actor.test.rs  connection.rs  errors.rs  harness_test.rs  messages.rs  mod.rs  mod.test.rs  node.rs  status.rs
murmer/src/remote/: examples.rs  macros.rs  mod.rs  sender.rs
murmer/tests/: sim_cluster.rs  sim_world.rs
scripts/: check-determinism.sh
static/: brand.html
