[workspace]
members = [
    "murmer",
    "murmer-macros",
    "murmer-monitor",
    "murmer-cluster-tests",
    "examples"
]
resolver = "2"

[workspace.dependencies]
murmer = { path = "murmer", version = "0.1.2" }
murmer-macros = { path = "murmer-macros", version = "0.1.2" }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
rand = "0.9"
tracing-subscriber = "0.3"

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Andrew Paxson"]
keywords = ["actor", "distributed", "actor-model", "async"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paxsonsa/murmer-rs"
homepage = "https://github.com/paxsonsa/murmer-rs"
