[package]
name = "murmer-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Examples for murmer, a distributed actor framework for Rust"

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "cluster_chat"
path = "src/cluster_chat.rs"

[[bin]]
name = "orchestrator"
path = "src/orchestrator.rs"

[[bin]]
name = "edge_client"
path = "src/edge_client.rs"

[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[dependencies]
iroh = "1.0.0"
murmer = { workspace = true, features = ["app"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
bincode = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
