[package]
name = "murmer-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Examples for murmer, a distributed actor framework for Rust"

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "cluster_chat"
path = "src/cluster_chat.rs"

[[bin]]
name = "orchestrator"
path = "src/orchestrator.rs"

[[bin]]
name = "edge_client"
path = "src/edge_client.rs"

[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[[bin]]
name = "sim_cluster_demo"
path = "src/sim_cluster_demo.rs"

[dependencies]
iroh = "1.0.0"
# `sim` enables the deterministic simulation runtime used by sim_cluster_demo;
# it is purely additive (the other example bins keep using the real cluster).
murmer = { workspace = true, features = ["app", "sim"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
bincode = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
