[package]
name = "murmer-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Orchestration layer for murmer — coordinator, placement strategies, and leader election"
keywords = ["actor", "distributed", "orchestration", "placement"]
categories = ["asynchronous", "network-programming"]

[dependencies]
murmer = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
