[package]
name = "murmer-cluster-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
murmer = { workspace = true }
murmer-macros = { workspace = true }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
rustls = { version = "0.23", features = ["ring"] }
