[package]
name = "murmer-cluster-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
murmer = { workspace = true, features = ["app"] }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
iroh = "1.0.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
