[package]
name = "murmer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
async-trait = "0.1.86"
bincode = {version = "2", features = ["serde"]}
bytes = { version = "1.10.0", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
quinn = { version = "0.11.6", features = ["rustls"] }
quinn-proto = { version = "0.11.9", features = ["rustls"] }
thiserror = "2.0.11"
inventory = "0.3.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
tokio-util = { version = "0.7.16", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5.0"
test-log = { version = "0.2.17", features = ["trace"] }
tokio-test = "0.4.3"
