[package]
name = "murmer-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cluster monitoring and observability for murmer actor systems"
keywords = ["actor", "distributed", "monitoring", "tracing"]
categories = ["asynchronous", "network-programming"]

[dependencies]
murmer = { path = "../murmer" }
murmer-macros = { path = "../murmer-macros" }
murmer-app = { path = "../murmer-app" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
