[package]
name = "murmer-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cluster monitoring and observability for murmer actor systems"
keywords = ["actor", "distributed", "monitoring", "tracing"]
categories = ["asynchronous", "network-programming"]

[dependencies]
murmer = { workspace = true }
murmer-macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
