[package]
name = "murmer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "A distributed actor framework for Rust"
keywords = ["actor", "distributed", "async", "network"]
categories = ["asynchronous", "network-programming", "concurrency"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Networking & clustering
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.13"
foca = { version = "0.19", features = ["bincode-codec"] }
mdns-sd = "0.18"
rand = "0.9"
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["full"] }
linkme = "0.3"

[dev-dependencies]
tracing-subscriber = "0.3"
