[package]
name = "murmer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "A distributed actor framework for Rust"
keywords = ["actor", "distributed", "async", "network"]
categories = ["asynchronous", "network-programming", "concurrency"]

[features]
default = ["macros"]
macros = ["dep:murmer-macros"]
app = []

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# Optional re-exports
murmer-macros = { workspace = true, optional = true }

# Networking & clustering
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.13"
foca = { version = "0.19", features = ["bincode-codec"] }
mdns-sd = "0.18"
rand = { workspace = true }
bytes = "1"
futures-util = "0.3"
tracing = { workspace = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7", features = ["full"] }
linkme = "0.3"

[dev-dependencies]
tracing-subscriber = { workspace = true }
