[package]
name = "murmer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "A distributed actor framework for Rust"
keywords = ["actor", "distributed", "async", "network"]
categories = ["asynchronous", "network-programming", "concurrency"]

[features]
default = ["macros"]
macros = ["dep:murmer-macros"]
app = ["dep:async-trait"]
monitor = ["dep:metrics", "dep:metrics-exporter-prometheus"]
# The `murmer` CLI (key + allowlist management). Pulls in clap.
cli = ["dep:clap"]
# Deterministic simulation runtime + single-node SimWorld harness.
sim = ["dep:futures-executor", "dep:rand_chacha"]

[[bin]]
name = "murmer"
required-features = ["cli"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# Optional re-exports
murmer-macros = { workspace = true, optional = true }

# Networking & clustering
rustls = { version = "0.23", features = ["ring"] }
foca = { version = "0.19", features = ["bincode-codec"] }
mdns-sd = "0.18"
rand = { workspace = true }
bytes = "1"
futures-util = "0.3"
tracing = { workspace = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7", features = ["full"] }
linkme = "0.3"
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }
iroh = "1.0.0"
clap = { version = "4", features = ["derive"], optional = true }
# Simulation runtime (feature = "sim"): single-threaded cooperative executor +
# deterministic, seedable PRNG. Kept out of the default build.
futures-executor = { version = "0.3", optional = true }
rand_chacha = { version = "0.9", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
