[package]
name = "poc-app"
version = "0.1.0"
edition = "2024"

[dependencies]
poc-framework = { path = "../poc-framework" }
poc-macros = { path = "../poc-macros" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tracing-subscriber = "0.3"
bincode = { version = "2.0.1", features = ["serde"] }
