[package]
name = "poc-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Networking & clustering
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.13"
foca = { version = "0.19", features = ["bincode-codec"] }
mdns-sd = "0.18"
rand = "0.9"
bytes = "1"
tracing = "0.1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["full"] }

[dev-dependencies]
tracing-subscriber = "0.3"
